[tool.poetry]
name = "daraja-connect"
version = "0.1.0b2"
description = "A wrapper library for the Daraja Mpesa API"
authors = ["Emz D <seaworndrift@gmail.com>"]
homepage = "https://github.com/enwawerueli/daraja-connect"
repository = "https://github.com/enwawerueli/daraja-connect"
license = "MIT"
readme = "README.md"
packages = [
    {include = "daraja_connect", from = "src"},
    {include = "test", format = "sdist"}
]
include = [
    {path = "LICENSE"},
    {path = "CONTRIBUTING.md", format = "sdist"},
    {path = ".env.example", format = "sdist"}
]
keywords = ["daraja", "mpesa", "payment"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pytest = "^7.2.1"
black = "^22.12.0"
types-requests = "^2.28.11.8"
python-dotenv = {extras = ["cli"], version = "^0.21.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
