[tool.poetry]
name = "mpesa-connect"
version = "2.0.0"
description = "A wrapper library for the Daraja Mpesa API"
authors = ["Eric <seaworndrift@gmail.com>"]
homepage = "https://github.com/seaworn/mpesa-connect"
repository = "https://github.com/seaworn/mpesa-connect"
license = "MIT"
readme = "README.md"
packages = [
    { include = "mpesa_connect", from = "src" },
    { include = "tests", format = "sdist" },
]
include = [{ path = "LICENSE" }, { path = "CONTRIBUTING.md", format = "sdist" }]
keywords = ["daraja", "mpesa", "payment"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.0 || >3.9.0,<3.9.1 || >3.9.1,<4.0"
requests = "^2.28.2"
cryptography = {version = "^45.0.5", extras = ["cryptography"]}

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pytest = "^7.2.1"
black = "^22.12.0"
types-requests = "^2.28.11.8"
responses = "^0.25.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
